--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,13 +1,360 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin: 0 auto;
-  margin-top: 60px;
+@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400&display=swap');
+:root{
+    --inner-page-width: 1000px;
 }
 
-a {
-  color: #60b5cc;
+/* Common elements
+ * ======================================== */
+
+body{
+    margin: 0;
+    font-family: 'Cantarell', sans-serif;
+    background-color: #121212;
+    color: #FFF;
+}
+
+a{
+    color: #FFF;
+    text-decoration: underline;
+}
+
+img{
+    max-width: 100%;
+}
+
+/* Sections
+ * ======================================== */
+
+.loading-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100vh;
+    background-color: #121212;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-overlay p{
+    font-size: 64px;
+    font-weight: normal;
+    animation: loading-pulse 1s linear infinite;
+}
+
+@keyframes loading-pulse{
+    0%{ opacity: 1; }
+    50%{ opacity: 0; }
+    100%{ opacity: 1; }
+}
+
+section{
+    width: calc(100% - 1rem);
+    max-width: var(--inner-page-width);
+    margin: 2.5rem auto;
+    padding: 0 0.5rem;
+}
+
+section header{
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin: 1rem;
+}
+
+footer{
+    margin: 1rem 0 0 0;
+    border-top: 1px solid #333;
+    padding: 1rem 0;
+    text-align: center;
+}
+
+.hero{
+    background: url('resx/bg.jpg') no-repeat center center;
+    background-size: cover;
+    overflow: hidden;
+    
+    box-shadow: 0 8px 8px -6px black;
+}
+
+.hero__bg-canvas{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+}
+
+.hero__content{
+    display: block;
+    position: relative;
+    z-index: 15;
+    
+    box-sizing: border-box;
+    margin: 0;
+    padding: 32px 16px;
+    
+    border: 0;
+    background-color: rgba(0, 0, 0, 0.33);
+    text-align: center;
+}
+
+.hero__content--visible{
+    display: block;
+}
+
+.hero__content h1{
+    font-size: 48px;
+    font-weight: normal;
+    margin: 1rem 0;
+}
+
+@media screen and (min-width: 768px) {
+    .hero__bg-canvas{
+        display: block;
+    }
+
+    .hero__content{
+        display: inline-block;
+        
+        margin: 100px 0 100px 201px;
+        padding: 16px;
+        width: 405px;
+        height: 304px;
+        opacity: 0;
+        
+        border: 1px solid rgba(128, 128, 128, 1);
+        background-color: rgba(0, 0, 0, 0.33);
+        transition: background-color 0.2s;
+        text-align: left;
+    }
+
+    .hero__content--visible{
+        opacity: 1;
+        animation: 1s ease 1s backwards hero-appear;
+    }
+}
+
+@keyframes hero-appear{
+    0% { opacity: 0; margin-left: 300px; }
+    100% { opacity: 1; margin-left: 201px; }
+}
+
+.contact{
+    text-align: center;
+}
+
+/* Funny Elements
+ * ======================================== */
+
+/* Deco table (about) */
+.deco-table{
+    display: block;
+}
+
+.deco-table--about .deco-table__left{
+    text-align: center;
+}
+
+.deco-table--about .deco-table__left img{
+    width: 140px;
+    height: auto;
+}
+
+.deco-table--about .deco-table__content{
+    display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .deco-table{
+        display: grid;
+        grid-template-columns: 350px auto;
+    }
+    
+    .deco-table--about .deco-table__left{
+        text-align: center;
+    }
+    
+    .deco-table--about .deco-table__left img{
+        width: 280px;
+        height: auto;
+    }
+    
+    .deco-table--about .deco-table__content{
+        display: flex;
+        align-items: center;
+    }
+}
+
+/* Technologies grid */
+.flex-technologies{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+}
+
+.flex-technologies li{
+    width: 128px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    
+    margin: 16px 0;
+    text-align: center;
+    color: #666;
+    transition: color 0.2s, margin 0.2s;
+    
+    cursor: default;
+}
+
+.flex-technologies li:hover{
+    color: #FFF;
+    margin: 10px 0 16px 0;
+}
+
+.flex-technologies li i{
+    display: block;
+    font-size: 2.5rem;
+    margin: 0 0 6px 0;
+}
+
+/* Projects grid */
+.project-grid{
+    display: flex;
+    flex-wrap: none;
+    overflow: auto hidden;
+    margin: 32px 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.project{
+    display: block;
+    
+    width: 320px;
+    max-width: calc(100vw - 48px);
+    margin: 16px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    
+    padding: 8px;
+    border: 1px solid rgb(80, 80, 80, 1);
+    background-color: transparent;
+    transition: background-color 0.2s;
+    text-decoration: none;
+    
+    cursor: pointer;
+}
+
+.project:hover{
+    background-color: rgba(80, 80, 80, 0.33);
+}
+
+.project h3{
+    font-size: 1.25rem;
+    margin: 0.5rem 0;
+}
+
+.project__tech{
+    color: #777;
+    font-style: italic;
+    text-align: right;
+    margin: 0.5rem 0;
+}
+
+@media screen and (min-width: 768px) {
+    .project-grid{
+        display: grid;
+        grid-template-columns: calc(33% - 11px) calc(33% - 11px) calc(33% - 11px);
+        grid-gap: 16px 16px;
+    }
+    
+    .project{
+        width: auto;
+        margin: 0;
+    }
+}
+
+
+/* Overlay modal */
+.overlay-modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100vh;
+    
+    background-color: rgba(0, 0, 0, 0.85);
+    
+    opacity: 0;
+    margin-top: 50vh;
+    pointer-events: none;
+    
+    transition: opacity 0.5s ease, margin 0.5s ease;
+}
+
+.overlay-modal--visible{
+    opacity: 1;
+    margin-top: 0;
+    pointer-events: auto;
+}
+
+.overlay-modal iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    border: none;
+    background: transparent;
+}
+
+.overlay-close-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+    
+    color: #CCC;
+    font-size: 2rem;
+    font-weight: bold;
+    border: 1px solid rgb(80, 80, 80, 1);
+    background-color: rgba(80, 80, 80, 0.33);
+    padding: 8px 16px;
+    transition: background-color 0.2s, color 0.2s;
+}
+
+.overlay-close-btn:hover{
+    color: #FFF;
+    background-color: rgba(80, 80, 80, 0.66);
+}
+
+.project-page{
+    width: 100%;
+    max-width: var(--inner-page-width);
+	margin: 96px auto 0 auto;
+	padding: 8px;
+}
+
+.project-page__meta{
+	color: #CCC;
+	font-style: italic;
+}
+
+.project-page__meta a{
+	color: #CCC;
+	font-style: italic;
+	text-decoration: underline;
+}
+
+ul.project-page__meta{
+    list-style: none;
+    padding: 0;
 }
