--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,6 +14,10 @@ body{
     color: #FFF;
 }
 
+body *{
+    box-sizing: border-box;
+}
+
 a{
     color: #FFF;
     text-decoration: underline;
@@ -25,32 +29,6 @@ img{
 
 /* Sections
  * ======================================== */
-
-.loading-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    height: 100vh;
-    background-color: #121212;
-    color: #FFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loading-overlay p{
-    font-size: 64px;
-    font-weight: normal;
-    animation: loading-pulse 1s linear infinite;
-}
-
-@keyframes loading-pulse{
-    0%{ opacity: 1; }
-    50%{ opacity: 0; }
-    100%{ opacity: 1; }
-}
 
 section{
     width: calc(100% - 1rem);
@@ -74,11 +52,25 @@ footer{
 }
 
 .hero{
-    background: url('resx/bg.jpg') no-repeat center center;
-    background-size: cover;
     overflow: hidden;
     
     box-shadow: 0 8px 8px -6px black;
+}
+
+.hero__bg-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 290px;
+    width: 100%;
+}
+
+.hero__bg-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .hero__bg-canvas{
@@ -98,6 +90,7 @@ footer{
     box-sizing: border-box;
     margin: 0;
     padding: 32px 16px;
+    height: 290px;
     
     border: 0;
     background-color: rgba(0, 0, 0, 0.33);
@@ -137,6 +130,10 @@ footer{
     .hero__content--visible{
         opacity: 1;
         animation: 1s ease 1s backwards hero-appear;
+    }
+
+    .hero__bg-img{
+        height: calc(304px + 100px + 100px);
     }
 }
 
@@ -282,7 +279,40 @@ footer{
 }
 
 
-/* Overlay modal */
+/* OVERLAYS
+ * ======================================== */
+/* Loading overlay */
+.loading-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100vh;
+    background-color: #121212;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-overlay p{
+    font-size: 64px;
+    font-weight: normal;
+    animation: loading-pulse 1s linear infinite;
+}
+
+.loading-overlay--hidden{
+    display: none;
+}
+
+@keyframes loading-pulse{
+    0%{ opacity: 1; }
+    50%{ opacity: 0; }
+    100%{ opacity: 1; }
+}
+
+/* Modal Overlay */
 .overlay-modal{
     position: fixed;
     top: 0;
@@ -336,11 +366,17 @@ footer{
     background-color: rgba(80, 80, 80, 0.66);
 }
 
+
+/* PROJECT PAGE
+ * ======================================== */
+/* Layout, common elements */
 .project-page{
     width: 100%;
     max-width: var(--inner-page-width);
-	margin: 96px auto 0 auto;
-	padding: 8px;
+    max-height: 100vh;
+	margin: 0 auto;
+	padding: 96px 8px 8px 8px;
+    overflow: auto;
 }
 
 .project-page__meta{
@@ -358,3 +394,71 @@ ul.project-page__meta{
     list-style: none;
     padding: 0;
 }
+
+/* Gallery */
+.gallery{
+	position: relative;
+	width: 100%;
+	max-width: calc(0.7 * var(--inner-page-width));
+	margin: 2rem 0;
+}
+
+.gallery img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+	opacity: 0;
+	
+	transition: opacity 0.7s;
+	pointer-events: none;
+}
+
+.gallery .gallery__active{
+	position: relative;
+	opacity: 1;
+	pointer-events: auto;
+}
+
+.gallery__nav{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	
+	transition: opacity 0.2s;
+	opacity: 0;
+}
+
+.gallery__nav:hover{
+	opacity: 1;
+}
+
+.gallery__left, .gallery__right{
+	position: absolute;
+	top: 0;
+	width: 48px;
+	height: 100%;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	cursor: pointer;
+	background-color: #000;
+	color: #FFF;
+	font-weight: bold;
+	font-size: 32px;
+	opacity: 0.25;
+	
+	transition: opacity 0.2s;
+}
+
+.gallery__left:hover, .gallery__right:hover{
+	opacity: 0.5;
+}
+
+.gallery__left{ left: 0; }
+.gallery__right{ right: 0; }
